--- a/style.css
+++ b/style.css
@@ -17,6 +17,30 @@ body {
   background: url(./background-image.jpg) center center / cover no-repeat;
 }
 
+.wrapper {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  margin-top: 3rem;
+}
+
+.dates {
+  display: flex;
+  justify-content: space-around;
+  width: 35rem;
+  height: 5rem;
+  font-size: 3rem;
+  border: 5px solid #303030;
+  border-radius: 10px;
+  align-items: center;
+}
+
+.numbers {
+  display: flex;
+}
+
 .clock {
   display: grid;
   grid-template-columns: 7rem 2rem 7rem 2rem 7rem;
@@ -24,8 +48,6 @@ body {
   line-height: 5rem;
   cursor: default;
   transition: transform 0.2s ease-in-out;
-  position: absolute;
-  margin-top: 10rem;
   border: 5px solid #303030;
   border-radius: 10px;
   justify-content: center;
@@ -34,24 +56,22 @@ body {
   height: 7rem;
 }
 
-.clock:hover {
-  transform: scale(2);
-}
-
 p,
 span {
   text-align: center;
 }
 
 @media (max-width: 1024px) {
+  .dates {
+    font-size: 2rem;
+    width: 25rem;
+    height: 3rem;
+  }
+
   .clock {
     font-size: 3rem;
     width: 20rem;
     height: 5rem;
     grid-template-columns: 4rem 1.5rem 4rem 1.5rem 4rem;
-  }
-
-  .clock:hover {
-    transform: none;
   }
 }
